package hellgren.two_variable_math_optimization;

public interface MediatorMemberInterface {
    void setMediator(OptimizationMediatorInterface mediator);
}
